--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "npx ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
