--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-    "outputDirectory": "build"
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/index.ts",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/index.js"
+      }
+    ]
   }
